--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,14 @@
         "phpunit/phpunit": "~4.8",
         "satooshi/php-coveralls": "~1.0",
         "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~1.12"
+        "friendsofphp/php-cs-fixer": "~1.12",
+        "phpseclib/phpseclib": "~2.0",
+        "firebase/php-jwt": "~4.0"
     },
     "autoload": {
-        "psr-4": { "Swagger\\Client\\" : "lib/" }
+        "psr-4": { "AStar\\Client\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "Swagger\\Client\\" : "test/" }
+        "psr-4": { "AStar\\Client\\" : "test/" }
     }
 }
