--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,7 @@
         "php": ">=5.4",
         "ext-curl": "*",
         "ext-json": "*",
-        "ext-mbstring": "*"
-    },
-    "require-dev": {
+        "ext-mbstring": "*",
         "phpunit/phpunit": "~4.8",
         "satooshi/php-coveralls": "~1.0",
         "squizlabs/php_codesniffer": "~2.6",
