--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "phpunit/phpunit": "~4.8",
         "satooshi/php-coveralls": "~1.0",
         "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~1.12",
+        "friendsofphp/php-cs-fixer" : "*",
         "phpseclib/phpseclib": "~2.0",
         "firebase/php-jwt": "~4.0"
     },
